--- a/package.json
+++ b/package.json
@@ -11,16 +11,25 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.14",
-    "@types/node": "22.7.9",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.2.5",
+    "@tsconfig/node22": "^22.0.2",
+    "@types/jest": "^30.0.0",
+    "@types/node": "22.15.32",
+    "@types/source-map-support": "^0.5.10",
     "aws-cdk": "2.1019.1",
+    "jest": "^30.0.2",
+    "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
-    "typescript": "~5.6.3"
+    "typescript": "~5.8.3"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.201.0",
-    "constructs": "^10.0.0"
+    "aws-cdk-lib": "2.202.0",
+    "cdk-nag": "^2.36.23",
+    "constructs": "^10.4.2",
+    "dotenv": "^16.5.0"
+  },
+  "peerDependencies": {
+    "aws-cdk": "2.1019.1",
+    "aws-cdk-lib": "2.202.0",
+    "constructs": "^10.4.2"
   }
 }
