--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,9 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
     "lib": [
-      "es2022"
+      "es2022",
+      "dom"
     ],
     "declaration": true,
     "strict": true,
@@ -24,6 +23,7 @@
       "./node_modules/@types"
     ]
   },
+  "extends": "@tsconfig/node22/tsconfig.json",
   "exclude": [
     "node_modules",
     "cdk.out"
