--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "typescript": "~5.8.3"
   },
   "dependencies": {
+    "@cdklabs/generative-ai-cdk-constructs": "^0.1.309",
     "aws-cdk-lib": "2.202.0",
     "cdk-nag": "^2.36.23",
     "constructs": "^10.4.2",
