--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,4 @@ VPC_PRIVATE_SUBNET_ROUTE_TABLE_IDS=rtb-xxxxxxxx,rtb-xxxxxxxx,rtb-xxxxxxxx
 
 COLLECTION_NAMES=collection1,collection2,collection3
 COLLECTION_TYPES=SEARCH,TIMESERIES,VECTORSEARCH
+COLLECTION_STANDBY_REPLICAS=ENABLED,ENABLED,DISABLED
